--- a/www/allperformers.html
+++ b/www/allperformers.html
@@ -119,28 +119,6 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
-    <template id="template-event">
-        <div>
-            <p></p>
-            <a href="" style="text-decoration: none; color: inherit;"><h6 style="display: inline;padding-right: 20px">Title</h6></a>
-            <p id="plot" style="display: inline;">Lorem ipsum dolor sit amet, quem populo at sed, eos mundi lucilius id. Vel id fastidii voluptua reprehendunt. Eirmod debitis detracto ex est, te his justo placerat abhorreant. Sea in erant diceret evertitur, no sonet corpora voluptaria nam. Dicta probatus ius te, no eum integre dissentiet deterruisset. Percipit detraxit facilisi ex eam. No harum neglegentur cum, exerci adipisci periculis has in.</p>
-            <p></p>
-            <div>
-                <button id="buy" class="btn waves-effect waves-light">
-                    Buy
-                    <i class="material-icons right">add_shopping_cart</i>
-                </button>
-                <button id="done" style="display:none" class="btn disabled">
-                    <i class="material-icons teal-text right">done</i>
-                </button>
-                <button id="unauthorized" style="display:none" class="btn disabled">
-                    <i class="material-icons teal-text right">cancel</i>
-                </button>
-                <h8 id="availability" class="teal-text">BOH</h8>
-            </div>
-            <p></p>
-        </div>
-    </template>
     <template id="template-row">
         <div>
             <div class="row">
@@ -177,6 +155,7 @@
                     artist.setAttribute( "id", artists_array[i].Name );
                     artist.querySelector( "a" ).setAttribute( "href", "/performers/" + artists_array[i].ArtistID );
                     artist.querySelector( "h5" ).innerHTML = artists_array[i].Name;
+                    artist.querySelector( "#description" ).querySelector("p").innerHTML = artists_array[i].Achievements;
                     let eElement = document.getElementsByClassName( "section" )[0];
                     eElement.insertBefore( artist, eElement.firstChild );
                 }
