--- a/www/byseminar.html
+++ b/www/byseminar.html
@@ -118,6 +118,8 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="/statics/js/checkLogin.js"></script>
+
     <template id="template-event">
         <div>
             <p></p>
