--- a/www/event.html
+++ b/www/event.html
@@ -151,6 +151,8 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="/statics/js/checkLogin.js"></script>
+
     <template id="template-pic">
         <div class="fade" style="display:none;">
             <img src="img1.jpg" style="width:100%;max-height:100%;max-width:100%">
