--- a/www/performers.html
+++ b/www/performers.html
@@ -135,6 +135,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="/statics/js/checkLogin.js"></script>
 
     <script>
         let check = function () {
