--- a/www/sameday.html
+++ b/www/sameday.html
@@ -118,6 +118,8 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="/statics/js/checkLogin.js"></script>
+
     <template id="template-event">
         <div>
             <p></p>
@@ -172,19 +174,19 @@
         let Date = document.URL.substring( document.URL.lastIndexOf( '/' ) + 1 )
         document.getElementsByTagName( "h3" )[0].innerHTML = Date;
         eventer( Date );
-            //let event = new XMLHttpRequest();
-            //event.open( "GET", "/v2/events/" + EventID );
-            //event.onload = function () {
-            //    if ( this.responseText == 0 ) {
-            //        console.log( "Server DB empy response" );
-            //    }fffsdfss
-            //    else {
-            //        let event = JSON.parse( this.responseText )[0];
-            //        document.getElementsByTagName( "h3" )[0].innerHTML = event.Date;
-            //        eventer( event.Date );
-            //    }
-            //}
-            //event.send();
+                    //let event = new XMLHttpRequest();
+                    //event.open( "GET", "/v2/events/" + EventID );
+                    //event.onload = function () {
+                    //    if ( this.responseText == 0 ) {
+                    //        console.log( "Server DB empy response" );
+                    //    }fffsdfss
+                    //    else {
+                    //        let event = JSON.parse( this.responseText )[0];
+                    //        document.getElementsByTagName( "h3" )[0].innerHTML = event.Date;
+                    //        eventer( event.Date );
+                    //    }
+                    //}
+                    //event.send();
     </script>
 
 </body>
